syntax = "proto3";

option csharp_namespace = "xyz.lsyyy.Verification.Protos";

import "General.proto";

package xyz.lsyyy.Verification.Protos;

message TagInfo{
	string TagName = 1;
	string ControllerName = 2;
	string ActionName = 3;
}

message UpdateTagRequest{
	int32 TagId = 1;
	string TagName = 2;
	string ControllerName = 3;
	string ActionName = 4;
}

message GetAllTagRequest{
}

message GetAllTagResponse{
	int32 TagId = 1;
	string TagName = 2;
	string ControllerName = 3;
	string ActionName = 4;
}

service ActionRpcService{
	rpc AddTag(TagInfo) returns (GeneralResponse);
	rpc DeleteTag(GeneralIdRequest) returns (GeneralResponse);
	rpc UpdateTag(UpdateTagRequest) returns (GeneralResponse);
	rpc GetAllTag(GetAllTagRequest) returns(stream GetAllTagResponse);
}